@@ -1,4 +1,31 @@
-javac --module-path lib/javafx --add-modules javafx.controls,javafx.fxml,javafx.web -Xlint:unchecked  -cp "class;lib/mysql/mysql-connector-j-9.3.0.jar;lib/junit/junit-4.11.jar;lib/junit/hamcrest-core-1.3.jar" -d class $(Get-ChildItem -Recurse -Filter *.java -Path .\src | ForEach-Object { $_.FullName })
-java -cp "class;lib/mysql/mysql-connector-j-9.3.0.jar;lib/junit/junit-4.11.jar;lib/junit/hamcrest-core-1.3.jar" --module-path lib/javafx --add-modules javafx.controls,javafx.fxml,javafx.web app.AdminApp
+x1 drill motor
+- x1 golden plate
+- x1 enchanted iron block
+- x3 enchanted redstone block
+- x10 treasurite
 
-Read-Host -Prompt "Press Enter to exit"
+x1 fuel canister
+- x2 enchanted coal block
+
+x6 golden plate
+- x2 enchanted gold block
+- x5 glacite jewel
+- x1 refined diamond
+  - x2 enchanted diamond block
+
+x8 refined titanium
+- x16 enchanted titanium
+
+x8 refined mithril
+- x160 enchanted mithril
+
+----
+
+x14 enchanted gold block
+x35 glacite jewel
+x14 enchanted diamond block
+x1 enchanted iron block
+x3 enchanted redstone block
+x10 treasurite
+x128 enchanted titanium
+x1280 enchanted mithril
